--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
   <title>GraphQL Base - Web Frontend</title>
-  <script src="client.js"></script>
-  <h1>Hello, frontend.</h1>
-  <p>Check your browser's console.</p>
+  <body>
+    <h1>Hello, frontend.</h1>
+    <p>Check your browser's console.</p>
+    <script src="client.js"></script>
+  </body>
 </html>
